# sentinellm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/api/: health.py  predict.py
ckpt/: results.json
data/: sample_corpus.parquet
docs/: benchmark.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: benchmark.py  export_onnx.py  generate_synthetic.py  seed_demo.py  smoke_predict.py  stub_onnx.py  train.py
spaces/: Dockerfile  README.md  app.py  requirements.txt
src/sentinellm/: config.py  logging.py
src/sentinellm/data/: labels.py  loader.py
src/sentinellm/db/: models.py  session.py
src/sentinellm/serving/: cache.py  predictor.py
tests/: conftest.py  test_api.py  test_cache.py  test_db.py  test_health.py
