[project]
name = "sentinellm"
version = "0.1.0"
description = "Toxicity classifier with ONNX-accelerated FastAPI serving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis>=5.2",
    "structlog>=24.4",
    "onnxruntime>=1.20",
    "transformers[sentencepiece]>=4.46",
    "numpy>=1.26,<2.2",
]

[project.optional-dependencies]
train = [
    "torch>=2.5",
    "datasets>=3.1",
    "accelerate>=1.1",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pyarrow>=18.0",
]
synth = [
    "google-genai>=0.3",
    "pandas>=2.2",
    "pyarrow>=18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinellm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.11"
files = ["app", "src/sentinellm"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/sentinellm --cov=app --cov-report=term-missing"
testpaths = ["tests"]
